fix: wrong height on empty list items

--- a/src/example/style.scss
+++ b/src/example/style.scss
@@ -162,6 +162,9 @@ body {
             }
             &:last-child {
               margin-block-end: 0;
+              &:first-child {
+                display: inline-block;
+              }
             }
           }
         }
